- solved ordering statistic